# Comp371_final_A

./: CMakeLists.txt  Interfaces.h  README.md  comp371_final.cpp  object_class.h  shaderloader.h  texturecube.h
assets/models/: grass.mtl  house1.mtl  house4.mtl  house5.mtl  lamp.mtl  snowground1.mtl  tree2.mtl  tree3.mtl  tree4.mtl  well.mtl
assets/shaders/: scene_fragment.glsl  scene_vertex.glsl  shadow_fragment.glsl  shadow_vertex.glsl  texture.glsl  texturev.glsl
shaders/: scene_fragment.glsl  scene_vertex.glsl  texture.glsl
src/: Interfaces.h  comp371_final.cpp  getfilelocation.h  loadobj.h  object_class.h  shaderloader.h  texturecube.h
